# weavops

./: LICENSE  README.md  pyproject.toml
openspec/: project.md
src/weavops/: __init__.py  changeset.py  env.py  managed.py  mcp.py  repository.py
